--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -4,7 +4,7 @@ body {
 }
 
 #body {
-	margin-top: $nav-bar-heigth;
+	//margin-top: $nav-bar-heigth;
 }
 
 #header {
